# xtalk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.ps1  install.py  install.sh  pyproject.toml
.github/workflows/: ci.yml
skills/xtalk/: SKILL.md
skills/xtalk/clients/: antigravity.md  codex.md  cursor.md
src/xtalk/: __init__.py  cli.py  crypto.py  daemon.py  relay.py  server.py  storage.py
tests/: conftest.py  test_cli_install.py  test_daemon.py  test_deadlock.py  test_e2e.py  test_e2ee.py  test_installer.py  test_mcp_transport.py  test_multi_room.py  test_regression_v04.py  test_regression_v04_round2.py  test_relay.py  test_storage_root.py  test_v04_features.py  test_validation.py  test_wait_and_status.py
